--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,3 +41,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
 }
+
+configurations.all {
+    resolutionStrategy {
+        force 'com.android.support:support-annotations:27.1.1'
+        force 'com.google.code.findbugs:jsr305:1.3.9'
+    }
+}
