--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,11 +21,31 @@
         <activity
             android:name=".RecipeDetailActivity"
             android:label="@string/title_recipedetailactivity_detail"
-            android:parentActivityName=".RecipeDetailActivityList">
+            android:parentActivityName=".RecipeDetailActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.example.android.bakingapp.RecipeDetailActivityList" />
+                android:value="com.example.android.bakingapp.RecipeDetailActivity" />
         </activity>
+
+        <receiver android:name=".widget.recipeWidget">
+            <intent-filter>
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE" />
+                <action android:name="android.appwidget.action.APPWIDGET_UPDATE2" />
+            </intent-filter>
+
+            <meta-data
+                android:name="android.appwidget.provider"
+                android:resource="@xml/recipe_widget_info" />
+        </receiver>
+
+        <service
+            android:name=".widget.GridWidgetService"
+            android:permission="android.permission.BIND_REMOTEVIEWS" />
+
+        <service
+            android:name=".widget.BakingService"
+            android:enabled="true"
+            android:exported="true"></service>
     </application>
 
 </manifest>
